--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
         img { 
             width: 15%; 
-            position: absolute;
-            right: 50px; 
-            top: 10px;
+            height: auto; 
+            float: right; 
+            margin: 20px; 
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 300px;
+            margin-top: 20px;
         }
 
         th, td {
@@ -38,6 +38,14 @@
 
         th {
             background-color: #f2f2f2;
+        }
+
+        a {
+            display: block; 
+            margin-top: 10px; 
+            color: blue; 
+            text-decoration: underline;
+            text-align: center; 
         }
     </style>
 </head>
@@ -75,14 +83,13 @@
         </tr>
     </table>
 
-    <a href="https://www.netflix.com"style="display: block; margin-top: 10px; color: blue; text-decoration: underline;">Acesse a Netflix</a>
+    <a href="https://www.netflix.com">Acesse a Netflix</a>
 
     <footer> 
         <p>Autora: Larissa Kellen Saraiva</p>
         <p>Curso: Engenharia de Software</p>
         <p>Matrícula: 496243</p>
     </footer>
-    
     
 </body>
 </html>
