--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #93b4ec;
             color: #333;
         }
 
         footer {
             text-align: center;
             padding: 10px;
-            background-color: rgb(80, 126, 150);
             color: rgb(255, 255, 255);
             margin-top: 100px; 
         }
@@ -87,35 +86,40 @@
         </div>
 </div>
 
-    <table style="border: 1px solid #000;">
-        <tr>
-            <th>Título</th>
-            <th>Direção</th>
-            <th>Avaliação</th>
-        </tr>
-        <tr>
-            <td>A Viagem de Chihiro</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>O Conto da Princesa Kaguya</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>O Castelo Animado</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Meu Amigo Totoro</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-    </table>
+<table>
+    <tr>
+        <th>Título</th>
+        <th>Resenha do Filme</th>
+        <th>Avaliação</th>
+    </tr>
+    <tr>
+        <td>A Viagem de Chihiro</td>
+        <td>Uma jovem garota, Chihiro, se perde em um mundo mágico e deve encontrar uma maneira de salvar seus pais, que foram transformados em porcos. O filme é uma jornada de autodescoberta e coragem, repleto de personagens memoráveis e visuais deslumbrantes.</td>
+        <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>O Conto da Princesa Kaguya</td>
+        <td>Baseado em um conto folclórico japonês, o filme narra a história de uma princesa que é encontrada dentro de um bambu. À medida que cresce, ela se torna uma bela jovem, mas sua busca por liberdade e felicidade a leva a um destino trágico.</td>
+        <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>O Castelo Animado</td>
+        <td>Sophia, uma jovem que é transformada em uma idosa por uma bruxa, encontra abrigo em um castelo mágico que pertence ao misterioso Howl. O filme explora temas de amor, guerra e autoaceitação, com uma animação deslumbrante e uma narrativa envolvente.</td>
+        <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>Meu Amigo Totoro</td>
+        <td>Duas irmãs se mudam para o campo e fazem amizade com criaturas mágicas, incluindo o adorável Totoro. O filme é uma celebração da infância, da natureza e da simplicidade da vida, com momentos de ternura e alegria.</td>
+        <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>Ponyo</td>
+        <td>A história de Ponyo, uma peixinha que deseja se tornar humana após conhecer um garoto chamado Sosuke. O filme é uma linda fábula sobre amizade, amor e a conexão com a natureza, com uma animação vibrante e cheia de vida.</td>
+        <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+</table>
 
-    <a href="https://www.netflix.com">Acesse a Netflix</a>
+    
 
     
 
