--- a/index.html
+++ b/index.html
@@ -88,35 +88,40 @@
 </div>
 
     <table style="border: 1px solid #000;">
-        <tr>
-            <th>Título</th>
-            <th>Direção</th>
-            <th>Avaliação</th>
-        </tr>
-        <tr>
-            <td>A Viagem de Chihiro</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>O Conto da Princesa Kaguya</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>O Castelo Animado</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Meu Amigo Totoro</td>
-            <td>Hayao Miyazaki</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
+        <table>
+            <tr>
+                <th>Título</th>
+                <th>Resenha</th>
+                <th>Avaliação</th>
+            </tr>
+            <tr>
+                <td>A Viagem de Chihiro</td>
+                <td>Uma obra-prima da animação que explora temas de crescimento e identidade.</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>O Conto da Princesa Kaguya</td>
+                <td>Uma bela adaptação de um conto folclórico japonês, com uma animação única e tocante.</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>O Castelo Animado</td>
+                <td>Uma história mágica sobre amor e aceitação, com personagens inesquecíveis.</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Meu Amigo Totoro</td>
+                <td>Um encantador conto de amizade entre crianças e espíritos da floresta.</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>O Menino e a Garça</td>
+                <td>Uma tocante história sobre amizade e a conexão com a natureza, repleta de lições de vida.</td>
+                <td>⭐⭐⭐⭐⭐</td>
     </table>
 
     <a href="https://www.netflix.com">Acesse a Netflix</a>
-
+    
     
 
 <script>
