--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 </div>
 
     <table style="border: 1px solid #000;">
-        <table>
             <tr>
                 <th>Título</th>
                 <th>Resenha</th>
@@ -96,7 +95,7 @@
             </tr>
             <tr>
                 <td>A Viagem de Chihiro</td>
-                <td>Uma obra-prima da animação que explora temas de crescimento e identidade.</td>
+                <td>Uma aventura mágica que leva uma jovem a um mundo de espíritos e de autodescoberta.</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
@@ -118,6 +117,13 @@
                 <td>O Menino e a Garça</td>
                 <td>Uma tocante história sobre amizade e a conexão com a natureza, repleta de lições de vida.</td>
                 <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>O Túmulo dos Vagalumes</td>
+                <td>Uma história emocional e comovente sobre a luta pela sobrevivência de dois irmãos durante a Segunda Guerra Mundial.</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+        
     </table>
 
     <a href="https://www.netflix.com">Acesse a Netflix</a>
