--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                 <td>Uma história emocional e comovente sobre a luta pela sobrevivência de dois irmãos durante a Segunda Guerra Mundial.</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
+
+            <td>O Menino e a Garça</td>
+                <td>Uma tocante história sobre amizade e a conexão com a natureza, repleta de lições de vida.</td>
+                <td>⭐⭐⭐⭐⭐</td>
         
     </table>
 
